# coursework_7

./: .env.sample  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_time.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
